<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeenStijl</string>
    <string name="error_desc1">Looks like your internet isn\'t working or GeenStijl is down.</string>
    <string name="error_desc2">or GeenStijl is down.</string>
    <string name="error_title1">Woops</string>
    <string name="error_title2">Uh-oh</string>
    <string name="error_title3">Error</string>
    <string name="score">points</string>
    <string name="share">Share</string>
    <string name="share_with_friends">Share this amazing article with your \'friends\'</string>
    <string name="mod_score">What do you think of this comment?</string>
    <string name="vote_fail">Your %s failed!</string>
    <string name="read_more">Continue reading</string>
    <string name="reaguursels">Comments</string>
    <string name="embed">Media</string>
    <string name="more">More</string>
    <string name="login">Add account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="login_error">Unable to log in.</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="logout">Log out</string>
    <string name="reply">Reply</string>
    <string name="reply_error">Reply failed, retry or login again.</string>
    <string name="loggedin">Welcome, %s!</string>
    <string name="reply_success">Your comment was successfully posted.</string>
    <string name="changelog_title">New version!</string>
    <string name="sectionheader_site">SITE</string>
    <string name="sectionheader_account">ACCOUNT</string>
    <string name="sectionheader_app">APP</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="lnterface">Interface</string>
    <string name="network">Network</string>
    <string name="hide_actionbar">Hide actionbar</string>
    <string name="hide_actionbar_expl">Hide the actionbar when scrolling down.</string>
    <string name="show_images">Show images</string>
    <string name="show_images_expl">Disabling this may help increasing loading time and decreasing data usage</string>
    <string name="textsize">Text size</string>
    <string name="textsize_expl">Change the text size of articles</string>
    <string name="behavior">Behavior</string>
    <string name="open_internal_browser">Open links in build-in webbrowser.</string>
    <string name="open_internal_browser_expl">Opening links in the internal browser is faster and prevents the app from crashing if you don\'t have a browser installed.</string>

    <string name="about_desc">GeenStijl reader is free opensource software, this means that the source code is available and editable to anyone. For more information see <a href='https://github.com/jariz/GeenStijl'>the project\'s page on GitHub</a></string>
    <string name="about_jariz">JariZ</string>
    <string name="about_createdby">Created by:</string>
    <string name="about_version">Version\u0020</string>
    <string name="about_reader">GeenStijl Reader</string>

    <string name="options">Settings</string>
    <string name="about">About</string>

    <string name="ago">\u0020ago</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="min">minute</string>
    <string name="mins">minutes</string>
    <string name="sec">sec</string>
    <string name="secs">secs</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="month">month</string>
    <string name="months">months</string><string name="error_button">Error details</string>

</resources>