<?xml version="1.0" encoding="utf-8"?>

<!--suppress AndroidLintUselessParent -->
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="#e5e5e5"
                 android:id="@+id/content_frame">

        <uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ptr_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ListView
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/show"
                    style="@style/Theme.Geenstijl.CardHolder"
                    android:visibility="gone"/>
        </uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/error"
                android:visibility="gone">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <com.devspark.robototextview.widget.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        app:typeface="roboto_thin_italic"
                        android:textColor="#e74c3c"
                        android:layout_gravity="center"
                        android:id="@+id/error_title"/>

                <com.devspark.robototextview.widget.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_desc1"
                        app:typeface="roboto_condensed_regular"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"/>

                <view
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        class="com.devspark.robototextview.widget.RobotoButton"
                        android:text="@string/error_button"
                        app:typeface="roboto_medium"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:id="@+id/error_button"
                        android:layout_marginTop="10dp"/>

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="visible"
                android:id="@+id/loading"
                android:background="#e5e5e5">

            <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center"/>
        </FrameLayout>

    </FrameLayout>
    <!-- The navigation drawer -->
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/left_drawer"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#ffebebeb"
            android:padding="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sectionheader_site"
                style="@style/GeenStijl.sectionHeader"/>

        <ListView
                android:id="@+id/site_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:background="#ffebebeb"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sectionheader_account"
                style="@style/GeenStijl.sectionHeader"
                android:id="@+id/sectionheader_account"/>

        <ListView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:background="#ffebebeb"/>

        <TextView
                style="@style/GeenStijl.sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sectionheader_app"
                android:id="@+id/textView"/>

        <ListView
                android:id="@+id/applist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:background="#ffebebeb"/>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>